# tac_os

./: .gitignore  LICENSE  README.md
.github/workflows/: rust-clippy.yml
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: gdt.rs  main.rs  vga.rs
scripts/: run
