[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.23"
bootloader_api = "0.11.0"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = { version = "0.14.10", default-features = false, features = ["instructions"] }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

